// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/no-implicit-close.md inline validation: adjacent 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "Element <p> is implicitly closed by adjacent <div>",
        "offset": 1,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "p",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<p>
    <div>lorem ipsum</div>
</p>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/no-implicit-close.md inline validation: correct-list 1`] = `[]`;

exports[`docs/rules/no-implicit-close.md inline validation: correct-paragraph 1`] = `[]`;

exports[`docs/rules/no-implicit-close.md inline validation: parent 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "inline",
    "messages": [
      {
        "column": 6,
        "line": 2,
        "message": "Element <li> is implicitly closed by sibling",
        "offset": 10,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "ul > li:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 6,
        "line": 3,
        "message": "Element <li> is implicitly closed by sibling",
        "offset": 22,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "ul > li:nth-child(2)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 6,
        "line": 4,
        "message": "Element <li> is implicitly closed by parent </ul>",
        "offset": 34,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "ul > li:nth-child(3)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<ul>
    <li>foo
    <li>bar
    <li>baz
</ul>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/no-implicit-close.md inline validation: siblings 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "Element <p> is implicitly closed by sibling",
        "offset": 1,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "p:nth-child(1)",
        "severity": 2,
        "size": 1,
      },
      {
        "column": 2,
        "line": 2,
        "message": "Element <p> is implicitly closed by document ending",
        "offset": 16,
        "ruleId": "no-implicit-close",
        "ruleUrl": "https://html-validate.org/rules/no-implicit-close.html",
        "selector": "p:nth-child(2)",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<p>lorem ipsum
<p>dolor sit amet",
    "warningCount": 0,
  },
]
`;
